@@ -20,10 +20,6 @@ body {
     font-size: 48px;
 }
 
-.header h1 .seo {
-    color: #d9dcd6;
-}
-
 .header div {
     padding-top: 15px;
     margin-right: 20px;
@@ -39,6 +35,10 @@ body {
 .header div ul li {
     display: inline-block;
     margin-left: 25px;
+}
+
+.seo {
+    color: #d9dcd6;
 }
 
 a {
