@@ -2,15 +2,15 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <meta charset="UTF-8">
     <title>Horiseon Social Solution Services, Inc</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-    <nav class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,55 +22,55 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </nav>
-    <div class="hero"></div>
-    <section class="content">
+        </nav>
+    </header>
+    <figure class="hero"></figure>
+    <main class="content">
         <div id="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization Idea Book" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization Idea Book" title="Search Enging Optimization Idea Book" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
         <div id="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Online Reputation Management Tools"/>
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Online Reputation Management Tools" title="Online Reputation Management Tools" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
         <div id="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Idea Roundtable"/>
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Idea Roundtable" title="Social Media Idea Roundtable" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </section>
-    <section class="benefits">
-        <div class="benefit-lead">
+    </main>
+    <aside class="benefits">
+        <section class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Lead Generation Icon" />
+            <img src="./assets/images/lead-generation.png" alt="Lead Generation Icon" title="Lead Generation Icon" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </section>
+        <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon"/>
+            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon" title="Brand Awareness Icon" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </section>
+        <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="Cost Management Icon" />
+            <img src="./assets/images/cost-management.png" alt="Cost Management Icon" title="Cost Management Icon" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </section>
+        </section>
+    </aside>
     <footer class="footer">
         <h2>Made with &hearts; by Horiseon</h2>
         <p>
